--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .buttons-list {
-    display: flex;
-    justify-content: center;
+    display: inline-block ;
+    // justify-content: center;
 }
 
 .buttons-item {
