--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,3 +12,8 @@
     --main-trans-duration: 250ms;
     --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+$mobile: 479.98px;
+$tablet: 767.98px;
+$desktop: 1198.98px;
+
