--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,35 +1,45 @@
 .clients__title {
+    padding-top: 60px;
     margin-bottom: 50px;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
 }
 
 .clients__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 60px;
 }
 
 .clients__item--link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 210px;
     height: 92px;
     fill: var(--main-svg-color);
     border: 1px solid var(--main-svg-color);
     border-radius: 4px;
-    transition-property: fill, border-color;
-    transition-duration: var(--main-trans-duration);
-    transition-timing-function: var(--cubic);
-    &:hover, &:focus {
-        fill: var(--accent-color);
-        border-color: var(--accent-color);
-        }
+    @media screen and(min-width:$tablet){
+        width: 226px;
+    }
+    @media screen and(min-width:$desktop){
+        width: 170px;
+        
+    }
+    // transition-property: fill, border-color;
+    // transition-duration: var(--main-trans-duration);
+    // transition-timing-function: var(--cubic);
+    // &:hover, &:focus {
+    //     fill: var(--accent-color);
+    //     border-color: var(--accent-color);
+    //     }
 }
