--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,15 +1,20 @@
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     text-decoration: none;
     background-color: var(--secondary-background-color);
 }
 
-.main-container {
-    display: flex;
-    align-items: baseline;
+// .main-container {
+//     // display: flex;
+//     // align-items: baseline;
+// }
+
+.adress {
+    margin-bottom: 60px;
 }
 
 .adress__item {
@@ -51,9 +56,9 @@
         }
 }
 
-.footer-links {
-    margin-left: 70px;
-}
+// .footer-links {
+//     // margin-left: 70px;
+// }
 
 .join {
     font-weight: 700;
@@ -67,7 +72,9 @@
 
 .flinks-list {
     display: flex;
+    justify-content: center;
     gap: 10px;
+    margin-bottom: 60px;
 
 }
 
@@ -89,7 +96,7 @@
 }
 
 .subscribe {
-    margin-left: 93px;
+    // margin-left: 93px;
     &-input {
             width: 358px;
             height: 50px;
@@ -102,12 +109,14 @@
         }
 }
 
-.mail-btn {
-    display: flex;
-}
+// .mail-btn {
+    
+//     // display: flex;
+// }
 
 .btn-subscribe {
-    display: flex;
+    margin-top: 20px;
+    // display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 700;
@@ -121,7 +130,7 @@
     height: 50px;
     width: 200px;
     padding: 10px 28px;
-    margin-left: 12px;
+    // margin-left: 12px;
     cursor: pointer;
 }
 
