--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,28 +1,30 @@
 .hero {
-    background-color: var(--secondary-background-color);
-    padding: 200px 0px 200px 0px;
-    background-image:
-        linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url("../images/background-img.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-}
+    max-width: 100%;
+    height: 400px;
+    padding: 118px 60px;
+    background-image: url("/images/hero-mob-x1.jpg");
+    @media screen and(min-width: 481px){
+        background-image: url("/images/hero-tablet-x1.jpg")
+    }
+    
+    }
+    
 
 .hero__title {
+    display: block;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 696px;
     color: var(--white-text-color);
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-}
+    font-size: 26px;
+    line-height: 1.62;
+    }
+
 
 .hero__button {
     font-family: inherit;
@@ -32,7 +34,7 @@
         margin-right: auto;
         border-radius: 4px;
         border: none;
-        width: 216px;
+        width: 200px;
         height: 50px;
         color: var(--white-text-color);
         background-color: var(--accent-color);
