--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,29 +1,39 @@
 .team {
     background-color: var(--third-background-color);
+    @media screen and(max-width: $tablet) {
+        padding-bottom: 60px;
+    }
 }
 
 .team__title {
-    margin-bottom: 50px;
+    padding-top: 60px;
+    margin-bottom: 30px;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    
     text-align: center;
     letter-spacing: 0.03em;
+    @media screen and(max-width: $tablet) {
+        font-size: 28px;
+        line-height: 1.18;    ;
+        }
 }
 
 .team__list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
 }
 
 .team__item {
-    margin-right: 30px;
+    margin-top: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: var(--nav-background-color);
-    &:last-child {
-        margin-right: 0;
-        }
+    // &:last-child {
+    //     margin-right: 0;
+    //     }
 }
 
 .name__info {
@@ -54,6 +64,7 @@
     align-items: center;
     justify-content: center;
     margin: 16px 0px 30px 0px;
+    // padding-bottom: 24px;
 }
 
 .item__link {
