--- a/sass/utils/_base-styles.scss
+++ b/sass/utils/_base-styles.scss
@@ -5,12 +5,15 @@ body {
 }
 
 .container {
-    width: 1200px;
+    // width: 1200px;
+    width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+    @media screen and (min-width: $mobile){
+    }
 }
 
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
+// .section {
+//     // padding-top: 94px;
+//     // padding-bottom: 94px;
+// }
