--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -116,7 +116,7 @@
 
 .btn-subscribe {
     margin-top: 20px;
-    // display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     font-weight: 700;
