--- a/css/main.css
+++ b/css/main.css
@@ -70,31 +70,23 @@ body {
 }
 
 .header {
-  width: 100%;
-  padding-top: 16px;
-  padding-bottom: 16px;
   background-color: var(--nav-background-color);
   border-bottom: 1px solid #ececec;
 }
 .header-container {
   margin: 0 auto;
 }
-
-.header__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .header__mobile {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
   background-color: var(--nav-background-color);
   transform: translateX(100%);
   transition: transform 1000ms var(--cubic);
+  z-index: 100;
 }
 .header__mobile.is-open {
   transform: translateX(0);
@@ -109,6 +101,23 @@ body {
   .header-desktop {
     display: none;
   }
+}
+@media screen and (min-width: 768px) {
+  .header-desktop {
+    display: flex;
+  }
+}
+
+.mobile-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header_overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .logo {
@@ -130,7 +139,18 @@ body {
 .logo__white {
   color: var(--white-text-color);
 }
+.mobile-wrap {
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .mobile-wrap {
+    display: none;
+  }
+}
+
 .open_menu {
+  margin-top: 10px;
+  padding-bottom: 10px;
   right: 10px;
   top: 10px;
   width: 40px;
@@ -141,11 +161,6 @@ body {
   background-color: var(--nav-background-color);
   border: none;
 }
-@media screen and (min-width: 768px) {
-  .open_menu {
-    display: none;
-  }
-}
 
 .close_menu {
   position: absolute;
@@ -155,13 +170,6 @@ body {
   height: 40px;
   background-color: var(--nav-background-color);
   border: none;
-}
-
-.header_overlay {
-  background-color: var(--nav-background-color);
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
 }
 
 .mob-nav__item {
@@ -181,6 +189,7 @@ body {
   text-decoration: none;
   color: var(--main-text-color);
 }
+
 .mob-nav__link.active {
   color: var(--accent-color);
 }
@@ -210,6 +219,8 @@ body {
 
 .mobile_soc-links {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .mobile_soc-link {
@@ -220,8 +231,6 @@ body {
   letter-spacing: 0.02em;
   color: var(--accent-color);
   text-decoration: none;
-  margin-right: 10px;
-  margin-left: 10px;
 }
 .mobile_soc-link::after {
   content: "";
@@ -233,22 +242,68 @@ body {
   background-color: var(--secondary-text-color);
 }
 
-.navigation__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--main-text-color);
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition-property: color;
-  transition-duration: var(--main-trans-duration);
-  transition-timing-function: var(--cubic);
+@media screen and (min-width: 767.98px) {
+  .header-desktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
-.navigation__link:hover, .navigation__link:focus {
-  color: var(--accent-color);
+@media screen and (min-width: 1198.98px) {
+  .header-desktop {
+    width: 1200px;
+  }
+}
+
+.navigation__list {
+  display: flex;
+  gap: 50px;
+}
+
+@media screen and (min-width: 767.98px) {
+  .navigation__link {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--main-text-color);
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: var(--main-trans-duration);
+    transition-timing-function: var(--cubic);
+  }
+  .navigation__link:hover, .navigation__link:focus {
+    color: var(--accent-color);
+  }
+  .navigation__link.active {
+    color: var(--accent-color);
+  }
+  .navigation__link.active::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    right: 0;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+}
+
+.contacts {
+  display: block;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+    gap: 30px;
+  }
 }
 
 .contacts__item--style {
@@ -275,11 +330,24 @@ body {
   max-width: 100%;
   height: 400px;
   padding: 118px 60px;
-  background-image: url("/images/hero-mob-x1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-mob-x1.jpg");
 }
 @media screen and (min-width: 481px) {
   .hero {
-    background-image: url("/images/hero-tablet-x1.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-tablet-x1.jpg");
+  }
+}
+@media screen and (min-width: 769px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-desk-x1.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+    height: 600px;
   }
 }
 
@@ -296,6 +364,12 @@ body {
   text-transform: uppercase;
   font-size: 26px;
   line-height: 1.62;
+  max-width: 360px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+  }
 }
 
 .hero__button {
@@ -350,6 +424,7 @@ body {
 @media screen and (min-width: 1200px) {
   .benefits__item {
     width: calc((100% - 90px) / 4);
+    max-width: 270px;
   }
 }
 
@@ -433,10 +508,11 @@ body {
 
 .team {
   background-color: var(--third-background-color);
+  padding-bottom: 60px;
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (min-width: 1198.98px) {
   .team {
-    padding-bottom: 60px;
+    padding-bottom: 94px;
   }
 }
 
@@ -445,13 +521,16 @@ body {
   margin-bottom: 30px;
   font-style: normal;
   font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (min-width: 1200px) {
   .team__title {
-    font-size: 28px;
-    line-height: 1.18;
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
   }
 }
 
@@ -463,14 +542,24 @@ body {
 }
 
 .team__item {
-  margin-top: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--nav-background-color);
 }
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+  }
+}
 
 .name__info {
   padding-top: 30px;
+  padding-bottom: 24px;
 }
 
 .name__info--name {
@@ -496,7 +585,7 @@ body {
   gap: 10px;
   align-items: center;
   justify-content: center;
-  margin: 16px 0px 30px 0px;
+  margin-top: 16px;
 }
 
 .item__link {
@@ -525,6 +614,12 @@ body {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .clients__list {
@@ -568,8 +663,24 @@ body {
   background-color: var(--secondary-background-color);
 }
 
+@media screen and (min-width: 767.98px) {
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+    justify-content: center;
+  }
+}
+
 .adress {
   margin-bottom: 60px;
+}
+@media screen and (min-width: 767.98px) {
+  .adress {
+    margin-right: 165px;
+    margin-bottom: 60px;
+    margin-left: 76px;
+  }
 }
 
 .adress__item {
@@ -674,6 +785,11 @@ body {
   padding: 10px 28px;
   cursor: pointer;
 }
+@media screen and (min-width: 1200px) {
+  .btn-subscribe {
+    display: flex;
+  }
+}
 
 .icon-send {
   display: inline-block;
@@ -685,6 +801,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding-top: 60px;
+}
+@media screen and (min-width: 767.98px) {
+  .buttons-list {
+    justify-content: center;
+  }
 }
 
 .buttons-item {
@@ -725,7 +846,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
   margin-top: 40px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .exp-list {
+    padding-bottom: 94px;
+  }
 }
 
 .exp-name {
@@ -757,6 +885,16 @@ body {
 .exp-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
+}
+@media screen and (min-width: 767.98px) {
+  .exp-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1198.98px) {
+  .exp-item {
+    width: 370px;
+  }
 }
 
 .exp-card {
@@ -816,6 +954,12 @@ body {
   background-color: var(--nav-background-color);
   transition: var(--main-trans-duration) var(--cubic);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
