--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,6 +7,10 @@
     line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
+    @media screen and(min-width: 1200px){
+        font-size: 36px;
+        line-height: 1.17;
+    }
 }
 
 .clients__list {
