--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,22 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
+@media screen and (min-width: 479.98px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 767.98px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1198.98px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -458,6 +474,9 @@ body {
   margin-bottom: 30px;
 }
 
+.job {
+  padding-bottom: 94px;
+}
 @media screen and (max-width: 1198.98px) {
   .job {
     display: none;
@@ -876,9 +895,12 @@ body {
   padding: 20px 24px 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+  flex-grow: 1;
 }
 
 .exp-item {
+  display: flex;
+  flex-direction: column;
   transition-duration: var(--main-trans-duration);
   transition-timing-function: var(--cubic);
 }
