--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -74,9 +74,12 @@
     padding: 20px 24px 20px 24px;
     border: 1px solid #eeeeee;
     border-top: none;
+    flex-grow: 1;
 }
 
 .exp-item {
+    display: flex;
+    flex-direction: column;
     
     transition-duration: var(--main-trans-duration);
     transition-timing-function: var(--cubic);
