--- a/sass/utils/_base-styles.scss
+++ b/sass/utils/_base-styles.scss
@@ -9,7 +9,15 @@ body {
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
-    @media screen and (min-width: $mobile){
+    @media screen and (min-width:$mobile){
+        max-width: 480px;
+    }
+    @media screen and (min-width:$tablet ){
+        max-width: 768px;  
+    }
+    @media screen and (min-width: $desktop){
+        max-width: 1200px;
+        
     }
 }
 
