--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -99,6 +99,9 @@
     height: 120px;
     width: 370px;
     padding: 12px 16px;
+    @media screen and (min-width: $desktop){
+        width: 448px;
+    }
 }
 
 .modal-input {
