--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,13 +4,13 @@
     padding: 118px 60px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-mob-x1.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob-x1.jpg");
     @media screen and(min-width: 481px){
 
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-tablet-x1.jpg")
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tablet-x1.jpg")
     }
     @media screen and(min-width: 769px){
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero-desk-x1.jpg")
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desk-x1.jpg")
     }
     @media screen and(min-width: 1200px) {
         padding: 200px 0;
