--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -35,7 +35,9 @@
     line-height: 1.62;
     max-width: 360px;
     @media screen and (min-width: 1200px) {
-        width: 696px;
+        font-size: 44px;
+        line-height: 1.36;
+        max-width: 696px;
     }
     }
 
