--- a/css/main.css
+++ b/css/main.css
@@ -384,7 +384,9 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 696px;
   }
 }
 
