--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,7 @@ body {
 }
 
 .hero {
+  background-color: var(--secondary-background-color);
   max-width: 100%;
   height: 400px;
   padding: 118px 60px;
@@ -696,7 +697,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
-    justify-content: center;
+    justify-content: space-around;
   }
 }
 
@@ -705,9 +706,7 @@ body {
 }
 @media screen and (min-width: 767.98px) {
   .adress {
-    margin-right: 165px;
     margin-bottom: 60px;
-    margin-left: 76px;
   }
 }
 
