--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    background-color: var(--secondary-background-color);
     max-width: 100%;
     height: 400px;
     padding: 118px 60px;
