--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -15,6 +15,10 @@
         gap: 60px;
         justify-content: space-around;
     }
+    @media screen and(min-width: $desktop) {
+        align-items: baseline;
+        
+    }
 }
 
 .adress {
@@ -122,9 +126,12 @@
 }
 
 .mail-btn {
-    // @media screen and (min-width: 1200px){
-    //     display: flex;
-    // }
+    @media screen and (min-width: $desktop ){
+        display: flex;
+        gap: 12px;
+
+        
+    }
 }
 
 .btn-subscribe {
