--- a/css/main.css
+++ b/css/main.css
@@ -711,7 +711,12 @@ body {
 }
 @media screen and (min-width: 767.98px) {
   .adress {
-    margin-bottom: 60px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1198.98px) {
+  .adress {
+    text-align: left;
   }
 }
 
