--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -24,8 +24,10 @@
 .adress {
     margin-bottom: 60px;
     @media screen and(min-width:$tablet){
-        margin-bottom: 60px;
-        
+        margin-bottom: 0; 
+    }
+    @media screen and(min-width: $desktop){
+        text-align: left;
     }
 }
 
